# OPD-Vertex-Group7

./: .env.example  .gitignore  README.md  docker-compose.yml  setup_opd_vertex.sh
.github/workflows/: ci-ai-service.yml  ci-appointment-service.yml  ci-consultation-service.yml  ci-email-service.yml  ci-gateway.yml  ci-prescription-service.yml  ci-transcription-service.yml  ci-user-service.yml
backend/: README.md  readme.md
backend/ai-service/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/ai-service/src/ai/: ollama_client.py  prompts.py  router.py  service.py
backend/ai-service/src/messaging/: messaging_manager.py  (+3 more)
backend/appointment-service/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/appointment-service/migrations/: env.py
backend/appointment-service/src/: logger_config.py
backend/consultation-service/: Dockerfile  main.py  pyproject.toml
backend/email-service/: .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml
backend/gateway/: main.py  pyproject.toml
backend/migrations/: README.md  main.py  pyproject.toml
backend/migrations/config/: services.example.json  services.json
backend/migrations/src/: alembic.py  args_validator.py  config_parser.py  docker.py  git.py  helper.py
backend/prescription-service/: main.py  pyproject.toml
backend/transcription-service/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/transcription-service/src/messaging/: messaging_manager.py  pubsub_exchanges.py  pubsub_facade.py
backend/transcription-service/src/models/msg/: transcript_message.py
backend/transcription-service/src/transcription/: router.py  whisper.py
backend/transcription-service/tests/: conftest.py  test_router.py  test_whisper.py
backend/transcription-service/tests/unit/: test_messaging_manager.py  test_pubsub_facade.py  test_router.py  test_whisper.py
backend/user-service/: main.py  pyproject.toml
frontend/: a.html  diagram.html  frontend.html
frontend/OPD-Vertex/: README.md  package-lock.json  package.json
(+24 files in other folders)
